# sfml_tetris

./: .gitignore  CMakeLists.txt  canvas.cpp  canvas.h  main.cpp  makefile  parameter.h  pixel.cpp  pixel.h  state.h
inc/: pixel.h
src/: canvas.cpp  main.cpp  pixel.cpp  state.cpp
src/img/: 8 Bit Tetris.tmx
